--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "loveme",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "author": "AmrOYounes",
   "license": "MIT",
@@ -16,7 +16,7 @@
     "test": "cross-env CI=1 react-scripts test --env=jsdom",
     "test:watch": "react-scripts test --env=jsdom",
     "build": "rollup -c",
-    "start": "rollup -c -w",
+    "start": "rollup -c -w",gitc
     "prepare": "npm run build",
     "predeploy": "cd example && npm install && npm run build",
     "deploy": "gh-pages -d example/build"
