--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "loveme",
-  "version": "1.0.1",
+  "name": "dropdownemenu",
+  "version": "1.1.1",
   "description": "",
   "author": "AmrOYounes",
   "license": "MIT",
-  "repository": "AmrOYounes/loveme",
+  "repository": "AmrOYounes/npm-module",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "jsnext:main": "dist/index.es.js",
